# Balatro

./: README.md  pyproject.toml
src/balatro/: __init__.py  cards.py  cli.py  game.py  scoring.py  ui.py
tests/: test_game.py  test_scoring.py
