[project]
name = "balatro"
version = "0.1.0"
description = "Simple Balatro-inspired poker scoring demo"
authors = [{ name = "AI Assistant" }]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
balatro = "balatro.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
